--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "nuxt-app",
-  "type": "module",
+  "name": "eemr-frontend",
+  "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "build": "nuxt build",
     "dev": "nuxt dev",
+    "build": "nuxt build",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "flowbite": "^3.1.2",
-    "nuxt": "^4.1.1",
-    "pinia": "^3.0.3",
-    "vue": "^3.5.20",
-    "vue-router": "^4.5.1"
+    "nuxt": "3.12.2",
+    "pinia": "^2.1.7",
+    "flowbite": "^2.3.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.35.0",
-    "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
-    "tailwindcss": "^4.1.13"
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.0",
+    "postcss": "^8.4.41",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.13"
   }
 }
