--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,17 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "axios": "^1.12.2",
+    "flowbite": "^2.3.0",
     "nuxt": "3.12.2",
-    "pinia": "^2.1.7",
-    "flowbite": "^2.3.0"
+    "pinia": "^2.1.7"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
-    "postcss": "^8.4.41",
+    "postcss": "^8.5.6",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.17"
   }
 }
