--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,9 +45,11 @@ services:
     command: npm run dev -- --hostname 0.0.0.0 --port 3000
     volumes:
       - ./frontend:/app
-      - /app/node_modules 
+      - /app/node_modules
     ports:
       - "3000:3000"
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     depends_on:
       backend:
         condition: service_healthy
@@ -69,7 +71,7 @@ services:
     image: grafana/grafana:latest
     container_name: eemr-grafana
     ports:
-      - "3001:3000"  # use 3001 to avoid conflict with frontend
+      - "3001:3000"
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=admin
     depends_on:
