--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,17 +2,10 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-# Copy package files
+# Install dependencies first (will be cached)
 COPY package*.json ./
-
-# Copy lockfile too!
-COPY package-lock.json ./
-
-# Clean reproducible install
 RUN npm ci
 
-# Copy rest of project
-COPY . .
-
+# The rest of the project is copied via docker-compose volume mount for hot-reloading
 EXPOSE 3000
 CMD ["npm", "run", "dev", "--", "--hostname", "0.0.0.0", "--port", "3000"]
